--- a/wirepullerwindow.ui
+++ b/wirepullerwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>880</width>
-    <height>480</height>
+    <height>530</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>880</width>
-    <height>480</height>
+    <height>530</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>880</width>
-    <height>480</height>
+    <height>530</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -38,7 +38,7 @@
       <x>10</x>
       <y>10</y>
       <width>654</width>
-      <height>414</height>
+      <height>441</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -87,13 +87,22 @@
                <item>
                 <widget class="QSlider" name="xAxisMotorPower">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                  <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
                  </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>84</height>
+                  </size>
+                 </property>
                  <property name="layoutDirection">
                   <enum>Qt::LeftToRight</enum>
+                 </property>
+                 <property name="minimum">
+                  <number>-100</number>
                  </property>
                  <property name="maximum">
                   <number>100</number>
@@ -103,6 +112,13 @@
                  </property>
                  <property name="tickInterval">
                   <number>0</number>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="xAxisResetPower">
+                 <property name="text">
+                  <string>Reset power</string>
                  </property>
                 </widget>
                </item>
@@ -247,7 +263,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QGroupBox" name="groupBox">
+                <widget class="QGroupBox" name="groupBox1">
                  <layout class="QHBoxLayout" name="horizontalLayout_3">
                   <item>
                    <widget class="QRadioButton" name="xAxisModePosition">
@@ -305,6 +321,9 @@
                  <property name="layoutDirection">
                   <enum>Qt::LeftToRight</enum>
                  </property>
+                 <property name="minimum">
+                  <number>-100</number>
+                 </property>
                  <property name="maximum">
                   <number>100</number>
                  </property>
@@ -313,6 +332,13 @@
                  </property>
                  <property name="tickInterval">
                   <number>0</number>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="wheelAxisResetPower">
+                 <property name="text">
+                  <string>Reset power</string>
                  </property>
                 </widget>
                </item>
@@ -457,7 +483,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QGroupBox" name="groupBox">
+                <widget class="QGroupBox" name="groupBox2">
                  <layout class="QHBoxLayout" name="horizontalLayout_4">
                   <item>
                    <widget class="QRadioButton" name="wheelAxisModePosition">
@@ -515,6 +541,9 @@
                  <property name="layoutDirection">
                   <enum>Qt::LeftToRight</enum>
                  </property>
+                 <property name="minimum">
+                  <number>-100</number>
+                 </property>
                  <property name="maximum">
                   <number>100</number>
                  </property>
@@ -523,6 +552,13 @@
                  </property>
                  <property name="tickInterval">
                   <number>0</number>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="breakerAxisResetPower">
+                 <property name="text">
+                  <string>Reset power</string>
                  </property>
                 </widget>
                </item>
@@ -667,7 +703,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QGroupBox" name="groupBox">
+                <widget class="QGroupBox" name="groupBox3">
                  <layout class="QHBoxLayout" name="horizontalLayout_11">
                   <item>
                    <widget class="QRadioButton" name="breakerAxisModePosition">
